Fix another issue with overflow

--- a/style.css
+++ b/style.css
@@ -189,7 +189,6 @@ body {
   align-items: flex-start;
   height: 100vh;
   flex-direction: column;
-  overflow: hidden;
 }
 
 button {
